--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+# Version 1.0.2
+Added CITATION file
+
 # Version 1.0.1
 Transitioned to Pathway Commons Version 5 (PC2 v5)
 Changed downloadPc to download from PC2 v5
