Fixed topPathways() bug Fixed fetch() example/test Changed title
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_0/madman/Rpacks/paxtoolsr@96385 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
+# Version 1.0.3
+Fixed topPathways() bug 
+Fixed fetch() example/test
+Changed title
+
 # Version 1.0.2
-Added CITATION file
+Added CITATION file 
+Update vignette to use BiocStyle
 
 # Version 1.0.1
 Transitioned to Pathway Commons Version 5 (PC2 v5)
